--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: "Playfair Display", serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     box-sizing: border-box;
 }
 nav{
